--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,12 @@
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
+.span-accent {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: 600;
+}
+
 .header {
   display: flex;
   background-color: #f2f2f2;
@@ -39,6 +45,7 @@
   line-height: 25px;
   font-size: 18px;
   z-index: 2;
+  font-weight: normal;
 }
 
 .header__link {
@@ -67,12 +74,49 @@
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
-  height: 568px;
+  height: 100vh;
   width: 568px;
   position: absolute;
   top: 64px;
   right: 0;
   background-color: #2f80ed;
+}
+
+.two-columns {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 100px;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.two-columns__brief {
+  width: 175px;
+  color: #2f80ed;
+  font-size: 18px;
+  line-height: 1.2;
+  font-weight: normal;
+  margin: 0;
+}
+
+.two-columns__main-text {
+  width: 80%;
+  min-width: 784px;
+  font-size: 24px;
+  line-height: 34px;
+  font-weight: normal;
+}
+
+.two-columns__paragraph {
+  margin-top: 30px;
+}
+
+.two-columns__paragraph:first-child {
+  margin-top: 0;
+}
+
+.two-columns__paragraph:last-child {
+  margin-bottom: 0;
 }
 
 /* и элемента с модификатором вида ключ-значение */
