--- a/styles/style.css
+++ b/styles/style.css
@@ -75,6 +75,7 @@
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
   height: 100vh;
+  max-height: 568px;
   width: 568px;
   position: absolute;
   top: 64px;
@@ -117,6 +118,73 @@
 
 .two-columns__paragraph:last-child {
   margin-bottom: 0;
+}
+
+.digits {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.section-title {
+  width: 60%;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 600;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.section-subtitle {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  width: 60%;
+  margin: 20px auto 0;
+  text-align: center;
+}
+
+.table {
+  width: 1100px;
+  padding-bottom: 100px;
+  padding-left: 0;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  list-style-type: none;
+}
+
+.table__cell {
+  width: 250px;
+  box-sizing: border-box;
+  margin-top: 60px;
+}
+
+/*.table__row {*/
+/*  display: flex;*/
+/*  justify-content: space-between;*/
+/*  margin-top: 60px;*/
+/*}*/
+
+.table__heading {
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+  margin: 0 0 20px 0;
+}
+
+.table__text {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  margin: 0 0 20px 0;
+}
+
+.table__text:last-child {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  margin: 0;
 }
 
 /* и элемента с модификатором вида ключ-значение */
