--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,10 @@
   font-weight: 600;
 }
 
+.text-color_theme_dark {
+  color: white;
+}
+
 .header {
   display: flex;
   background-color: #f2f2f2;
@@ -145,7 +149,6 @@
 
 .table {
   width: 1100px;
-  padding-bottom: 100px;
   padding-left: 0;
   margin: 0 auto;
   display: flex;
@@ -187,6 +190,8 @@
   margin: 0;
 }
 
+.table__theme_dark {
+}
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
   width: 200px;
@@ -194,3 +199,81 @@
   margin-right: 0;
   margin-top: 80px;
 }
+
+.table__heading_theme_dark {
+  color: white;
+}
+
+.table__text_theme_dark {
+  color: white;
+}
+
+.feynman {
+  background-color: #f2f2f2;
+  max-height: 890px;
+  min-height: 890px;
+  padding-top: 100px;
+  position: relative;
+  background-image: url("../images/feynman.png");
+  background-repeat: no-repeat;
+  background-size: 867px 637px;
+  background-position: bottom left;
+  box-sizing: border-box;
+}
+
+.feynman__title {
+  border: 1px solid red;
+  margin: 0 auto;
+  width: 658px;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: 600;
+  text-align: center;
+  z-index: 1;
+}
+
+.feynman__subtitle {
+  display: block;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  border: 1px solid red;
+  margin: 70px auto 0 auto;
+  text-align: center;
+  z-index: 2;
+}
+
+.feynman__link {
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  text-decoration: none;
+  position: absolute;
+  top: 50%;
+  right: 48px;
+}
+
+.kaufman {
+  background-color: #1f1f1f;
+  padding-top: 90px;
+  padding-bottom: 90px;
+  overflow: hidden;
+  position: relative;
+  z-index: 1;
+}
+
+.kaufman__triangle {
+  position: absolute;
+  right: -210px;
+  top: 0;
+  width: 877px;
+  height: 877px;
+  z-index: -1;
+}
+
+.footer {
+  border: 1px red solid;
+  padding-top: 60px;
+  padding-bottom: 40px;
+}
+
