--- a/styles/style.css
+++ b/styles/style.css
@@ -222,7 +222,6 @@
 }
 
 .feynman__title {
-  border: 1px solid red;
   margin: 0 auto;
   width: 658px;
   line-height: 1.15;
@@ -237,7 +236,6 @@
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
-  border: 1px solid red;
   margin: 70px auto 0 auto;
   text-align: center;
   z-index: 2;
@@ -272,14 +270,93 @@
 }
 
 .footer {
-  border: 1px red solid;
+  min-height: 350px;
+  height: 350px;
   padding-top: 60px;
   padding-bottom: 40px;
+  background-color: #1f1f1f;
+  box-sizing: border-box;
 }
 
 .footer__columns {
-
+  height: 100%;
+  display: flex;
+  flex-basis: 711px;
+  justify-content: space-between;
+  width: 90%;
+  margin: 0 auto;
 }
 
-.footer__columns_content_copyright
+.footer__column_content_copyright {
+  display: flex;
+  flex-basis: 720px;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.logo_place_footer {
+  height: 35px;
+  width: 183px;
+}
+
+.footer-author {
+  margin-bottom: 18px;
+  margin-top: 18px;
+  color: white;
+}
+
+.column-heading {
+  margin-bottom: 20px;
+  margin-top: 0;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.column-links {
+  display: flex;
+  flex-direction: column;
+  padding-left: 0;
+}
+
+.column-link {
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+  text-decoration: none;
+}
+
+.footer__column_socials .column-link {
+  display: flex;
+  align-items: center;
+}
+.footer__column_socials .column-link.column-link_type_vk:before {
+  background-image: url(../images/vk_color_white.svg);
+  background-repeat: no-repeat;
+  content: "";
+  margin-right: 10px;
+  height: 16px;
+  width: 16px;
+  display: flex;
+}
+
+.footer__column_socials .column-link.column-link_type_fb:before {
+  background-image: url(../images/facebook_color_white.svg);
+  background-repeat: no-repeat;
+  content: "";
+  margin-right: 10px;
+  height: 16px;
+  width: 16px;
+  display: flex;
+}
+
+.footer__column_socials .column-link.column-link_type_insta:before {
+  background-image: url(../images/instagram_color_white.svg);
+  background-repeat: no-repeat;
+  content: "";
+  margin-right: 10px;
+  height: 16px;
+  width: 16px;
+  display: inline-block;
+}
 
