--- a/styles/style.css
+++ b/styles/style.css
@@ -10,13 +10,17 @@
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
-.span-accent {
+.two-columns__span-accent {
   line-height: 34px;
   font-size: 24px;
   font-weight: 600;
 }
 
-.text-color_theme_dark {
+.section-title_theme_dark {
+  color: white;
+}
+
+.section-subtitle_theme_dark {
   color: white;
 }
 
@@ -33,7 +37,8 @@
 }
 
 .header__title {
-  width: 730px;
+  margin: 0;
+  max-width: 730px;
   padding-left: 64px;
   line-height: 96px;
   font-size: 102px;
@@ -42,7 +47,8 @@
 }
 
 .header__subtitle {
-  width: 388px;
+  margin: 0;
+  max-width: 388px;
   position: absolute;
   bottom: 30px;
   left: 64px;
@@ -67,7 +73,7 @@
   z-index: 1;
 }
 
-.header__logo_place_header {
+.logo_place_header {
   width: 183px;
   height: 32px;
   position: absolute;
@@ -113,15 +119,12 @@
 }
 
 .two-columns__paragraph {
+  margin-bottom: 0;
   margin-top: 30px;
 }
 
 .two-columns__paragraph:first-child {
   margin-top: 0;
-}
-
-.two-columns__paragraph:last-child {
-  margin-bottom: 0;
 }
 
 .digits {
@@ -190,7 +193,7 @@
   margin: 0;
 }
 
-.table__theme_dark {
+.table_theme_dark {
 }
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
@@ -210,7 +213,6 @@
 
 .feynman {
   background-color: #f2f2f2;
-  max-height: 890px;
   min-height: 890px;
   padding-top: 100px;
   position: relative;
@@ -249,6 +251,7 @@
   position: absolute;
   top: 50%;
   right: 48px;
+  color: #2f80ed;
 }
 
 .kaufman {
@@ -261,6 +264,8 @@
 }
 
 .kaufman__triangle {
+  background-image: url("../images/kaufman-triangle.svg");
+  background-size: cover;
   position: absolute;
   right: -210px;
   top: 0;
@@ -271,7 +276,6 @@
 
 .footer {
   min-height: 350px;
-  height: 350px;
   padding-top: 60px;
   padding-bottom: 40px;
   background-color: #1f1f1f;
@@ -281,15 +285,15 @@
 .footer__columns {
   height: 100%;
   display: flex;
-  flex-basis: 711px;
   justify-content: space-between;
   width: 90%;
   margin: 0 auto;
 }
 
 .footer__column_content_copyright {
+  height: 350px;
   display: flex;
-  flex-basis: 720px;
+  flex-basis: 711px;
   flex-direction: column;
   justify-content: space-between;
 }
@@ -299,64 +303,36 @@
   width: 183px;
 }
 
-.footer-author {
+.footer__author {
   margin-bottom: 18px;
   margin-top: 18px;
   color: white;
 }
 
-.column-heading {
+.footer__column-heading {
   margin-bottom: 20px;
   margin-top: 0;
   line-height: 30px;
   font-size: 18px;
   font-weight: 600;
+  color: white;
 }
 
-.column-links {
+.footer__column-links {
   display: flex;
   flex-direction: column;
   padding-left: 0;
+  list-style-type: none;
 }
 
-.column-link {
+.footer__column-link {
   line-height: 30px;
   font-size: 18px;
   font-weight: normal;
   text-decoration: none;
+  color: white;
 }
 
-.footer__column_socials .column-link {
-  display: flex;
-  align-items: center;
+.footer_column-link-icon {
+  text-align: center;
 }
-.footer__column_socials .column-link.column-link_type_vk:before {
-  background-image: url(../images/vk_color_white.svg);
-  background-repeat: no-repeat;
-  content: "";
-  margin-right: 10px;
-  height: 16px;
-  width: 16px;
-  display: flex;
-}
-
-.footer__column_socials .column-link.column-link_type_fb:before {
-  background-image: url(../images/facebook_color_white.svg);
-  background-repeat: no-repeat;
-  content: "";
-  margin-right: 10px;
-  height: 16px;
-  width: 16px;
-  display: flex;
-}
-
-.footer__column_socials .column-link.column-link_type_insta:before {
-  background-image: url(../images/instagram_color_white.svg);
-  background-repeat: no-repeat;
-  content: "";
-  margin-right: 10px;
-  height: 16px;
-  width: 16px;
-  display: inline-block;
-}
-
