--- a/styles/style.css
+++ b/styles/style.css
@@ -10,20 +10,6 @@
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
-.two-columns__span-accent {
-  line-height: 34px;
-  font-size: 24px;
-  font-weight: 600;
-}
-
-.section-title_theme_dark {
-  color: white;
-}
-
-.section-subtitle_theme_dark {
-  color: white;
-}
-
 .header {
   display: flex;
   background-color: #f2f2f2;
@@ -60,6 +46,7 @@
 
 .header__link {
   color: #2f80ed;
+  text-decoration: none;
 }
 
 .header__main-ilustration {
@@ -101,6 +88,12 @@
   margin: 0 auto;
 }
 
+.two-columns__span-accent {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: 600;
+}
+
 .two-columns__brief {
   width: 175px;
   color: #2f80ed;
@@ -139,6 +132,14 @@
   font-weight: 600;
   margin: 0 auto;
   text-align: center;
+}
+
+.section-title_theme_dark {
+  color: white;
+}
+
+.section-subtitle_theme_dark {
+  color: white;
 }
 
 .section-subtitle {
@@ -187,9 +188,6 @@
 }
 
 .table__text:last-child {
-  line-height: 1.2;
-  font-size: 18px;
-  font-weight: normal;
   margin: 0;
 }
 
@@ -275,7 +273,7 @@
 }
 
 .footer {
-  min-height: 350px;
+  min-height: 250px;
   padding-top: 60px;
   padding-bottom: 40px;
   background-color: #1f1f1f;
@@ -291,7 +289,7 @@
 }
 
 .footer__column_content_copyright {
-  height: 350px;
+  min-height: 250px;
   display: flex;
   flex-basis: 711px;
   flex-direction: column;
@@ -307,6 +305,9 @@
   margin-bottom: 18px;
   margin-top: 18px;
   color: white;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
 }
 
 .footer__column-heading {
@@ -318,10 +319,13 @@
   color: white;
 }
 
+/*Не очень понимаю, зачем тут что-либо сбрасывать, тк там даже в стилях по дефолту везде нули*/
+/*и добавление margin:0 не меняет абсолютно ничего*/
 .footer__column-links {
   display: flex;
   flex-direction: column;
   padding-left: 0;
+  margin: 0;
   list-style-type: none;
 }
 
@@ -333,6 +337,6 @@
   color: white;
 }
 
-.footer_column-link-icon {
+.footer__social-icon {
   text-align: center;
 }
