--- a/blocks/header/__square-pic/header__square-pic.css
+++ b/blocks/header/__square-pic/header__square-pic.css
@@ -1,3 +1,5 @@
+@import url(../../rotation/rotation.css);
+
 .header__square-pic {
   height: 100vh;
   max-height: 568px;
@@ -6,4 +8,6 @@
   top: 64px;
   right: 0;
   background-color: #2f80ed;
+  animation: rotation 20s normal infinite;
+  overflow: hidden;
 }
