--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -1,12 +1,14 @@
+/*Никак не хочет вверх прижиматься, подскажите как правильно, пожалуйста*/
 .khan__buy-link {
   text-decoration: none;
   color: #2f80ed;
   line-height: 42px;
   font-size: 30px;
   font-weight: normal;
+  transition: opacity .5s;
+  align-self: start;
 }
 
 .khan__buy-link:hover {
   opacity: 0.5;
-  transition: opacity .5s;
 }
